search box shadow invisible bug fix

--- a/webpages/styles/components/search.css
+++ b/webpages/styles/components/search.css
@@ -4,6 +4,7 @@
   user-select: none;
   box-shadow: var(--searchbox-shadow);
   padding: 20px 30px;
+  z-index: 1;
 }
 .search-box input {
   background: var(--search-input-background);
